--- a/style.css
+++ b/style.css
@@ -1,330 +1,20 @@
-@charset "UTF-8";
-
-/* SpryMenuBarHorizontal.css - version 0.6 - Spry Pre-Release 1.6.1 */
-
-/* Copyright (c) 2006. Adobe Systems Incorporated. All rights reserved. */
-
-/*******************************************************************************
-
- LAYOUT INFORMATION: describes box model, positioning, z-order
-
- *******************************************************************************/
-/* The outermost container of the Menu Bar, an auto width box with no margin or padding */
-ul.MenuBarHorizontal
-{
-	display:block;
-	margin: 0;
-	padding: 0;
-	list-style-type: none;
-	cursor: default;
-	width: inherit;
-	height: inherit;
-}
-/* Menu item containers, position children relative to this container and are a fixed width */
-ul.MenuBarHorizontal li
-{
-	margin: 0;
-	padding: 0;
-	list-style-type: none;
-	text-align: center;
-	float: left;
-	height: inherit;
-	font-family: "Arial Black", Gadget, sans-serif;
-	color: #FFCE16;
-}
-
-/* Menu item containers are same fixed width as parent */
-ul.MenuBarHorizontal ul li
-{
-	width: 8.2em;
-}
-
-/*******************************************************************************
-
- Menu bar DESIGN INFORMATION: describes color scheme, borders, fonts
-
- *******************************************************************************/
-
-/* Menu items are a light gray block with padding and no text decoration */
-ul.MenuBarHorizontal a
-{
-	display:block;
-	cursor: pointer;
-	padding: 0.75em 0.75em;
-	text-decoration: none;
-	color: #FFF;
-}
-/* Menu items that have mouse over or focus have a blue background and white text */
-ul.MenuBarHorizontal a:hover, ul.MenuBarHorizontal a:focus
-{
-	
-	color: #000000;
-  background-color:#FFCE16; 
-}
-.dropdown {
-  position: relative;
-  display:inline-block;
-}
-.dropdown:hover .dropdown-content{
-  display:block;
-}
-.dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: #CD1026;
-    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
-    width:100%;
-    border-bottom-left-radius:2em;
-    border-bottom-right-radius:2em;
-    overflow:hidden;
-}
-.dropschedule {
-  position: relative;
-  display:inline-block;
-}
-.dropschedule:hover .schedule{
-  display:block;
-}
-.schedule{
-    display: none;
-    position: absolute;
-    background-color: transparent;
-    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
-    border-bottom-left-radius:5em;
-    border-bottom-right-radius:5em;
-    border-top-right-radius:5em;
-    overflow:hidden;
-  }
-div.dropdown-content a{
-  padding:0.75em 0.25em
-}
 body {
-	color: #000000;
+  background-color: #FFFFFF;
+  color: #000000;
   font-family: monospace; 
-  font-size: 1.1em;
-  margin:0;
-  }
-#body{
-  background-image: url(imagens/MlSI354.jpg);
-	background-size:contain;
-	background-repeat:no-repeat;
-	background-attachment: fixed;
-	background-position:bottom;
-	background-color:#0E8F91;
-	
-  }
-h1 { display:block;color: #BCAC00; background-color: #CD1026;}
-h1 a:link, a:visited { color: #BCAC00; text-decoration: none; }
-h1 a:hover { color: #FFFF00; text-decoration: underline; }
+  font-size: 1.1em; }
+
+h1 { color: #BCAC00; background-color: #9E2B2D; margin: -10px 0px 0px -10px; padding: 20px 0px 20px 10px; }
+h1 a:link { color: #BCAC00; background-color: #9E2B2D; text-decoration: none; }
+h1 a:visited { color: #BCAC00; background-color: #9E2B2D; text-decoration: none; }
+h1 a:hover { color: #FFFF00; background-color: #9E2B2D; text-decoration: underline; }
+
 h2 { color: #9E2B2D; }
-h2 a:link, a:visited { color: #9E2B2D; text-decoration: none; }
-h2 a:hover { color: #FFFF00; background-color: #9E2B2D; text-decoration: underline; }
-h3 { color: #9E2B2D; background-color:#9E2B2D; text-align:center;}
-#barra {
-	height: 50px;
-	width: 100%;
-	flex-grow:1;
-	text-align:center;
-}
-#icon a:link,a:visited{
-  width:96px;
-  height:125px;
-  float:left;
-  background-image:url(imagens/favicon.png);
-  background-repeat:no-repeat;
-  background-size:contain;
-  border-bottom-right-radius:20em;
-  }
-header {
-  height:50px;
-	background-color:#CD1026;
-	width:100%;
-	position:fixed;
-	z-index:900;
-	text-align:center;
-  }
+
+h3 { color: #9E2B2D; }
 
 footer { 
-  color: #4c4c4c;
-  width:100%;
-  height:50px;
+  color: #4c4c4c; 
   font-size: 0.8em; 
-  float:left;
-  }
-#outerwrapper{
-  width:99%;
-  overflow:hidden;
-  }  
-#cover{
-  position: absolute;
-  width: inherit;
-  height:inherit;
-  background-image: url(imagens/chocu.png);
-  background-size:contain;
-  background-repeat:no-repeat;
-  background-position:center;
-  margin-left:-65px;
-  }
-#container {
-	width: 86%;
-	background-image: url(imagens/cover.png);
-	background-size:cover;
-	background-repeat:no-repeat;
-	background-position:center 50px;
-	background-color:transparent;
-	display:block;
-	margin-right:auto;
-	margin-left: auto;
-}
-#bottom{
-  background-color:white;}
-span a:link,a:visited {
-  display: inline-block;
-	cursor: pointer;
-	text-decoration: none;
-  }
-#series{
-  float:left;
-  width:720px;
-  height:inherit;
-  flex-grow:1;
-  background:#FFFFFF;
-  }  
-#firstlink a:link, a:visited{
-  color: #9E2B2D;
-  cursor:default;
-  width:33%;
-  }  
-#prevlink a:link, #prevlink a:visited, #nextlink a:link, #nextlink a:visited{
-  color: #BCAC00;
-  }
-#prevlink a:link, a:visited{
-  float:left;
-  text-align:left;
-  width:33%
-  }
-#downloadlink a:link, a:visited {
-  background-color: #BCAC00;
-  color: #9E2B2D;
-  text-align:center;
-  width:33%
-  }  
-#nextlink a:link, a:visited{
-  float:right;
-  text-align:right;
-  width:33%
-  }
-#rightnav {
-  float:right;
-  width:480px;
-  margin-right: auto;
-	margin-left: auto;
-  }
-#request a:link, a:visited{
-	position:fixed;
-	background-image:url("imagens/request.png");
-	background-repeat:no-repeat;
-	background-size:contain;
-  background-position:bottom right;
-	height: 212px;
-	width: 240px;
-	right:0;
-}
-#request a:hover{
-  background-image:url("imagens/sobre1.png"); 
-  
-}
-#top{
-  height:50px;
-}
-#logo {
-	height: 446px;
-	text-shadow: 2px 1px #FFFFFF;
-	width: 100%;
-	background-color:transparent;
-}
-#content {
-	float: left;
-	background-color:white;
-	width: 100%;
-	height:900px;
-	display:flex;
-}
-#donate a:link, a:visited{
-	float:right;
-	background-image:url("imagens/patron.png");
-	background-repeat:no-repeat;
-	background-size:contain;
-	height: 50px;
-	width: 160px;
-	margin-top:-5px;
-}
-#donate a:hover{
- background-image:url("imagens/sobre2.fw.png");
- background-color:transparent;
- height:150px;
-}
-#donate a:focus{
- background-color:transparent;
-}
-#player{
-  width:100%;
-  height:360px;
-  border:0;
-}
-#navbar{
-  display:inline-block;
-  width:inherit;
-}
-#notfound{
-  display:block;
-  background-image:url("imagens/teste34.jpg");
-  background-size:contain;
-  background-repeat:round no-repeat;
-  height:100vh;
-  }
-#schedbackground{
- width:475px;
- height:250px;
- border-bottom-left-radius:5em;
- border-bottom-right-radius:5em;
- border-top-right-radius:5em;
- background-image:url("imagens/Sem%20título-81.fw.png");
- background-repeat:no-repeat; 
- overflow:hidden;
-}
-
-#schedule{
- width:475px;
- height:250px;
- border-top-left-radius:4em;
- border-bottom-left-radius:5em;
- border-bottom-right-radius:5em;
- border-top-right-radius:5em;
- background-image:url("imagens/schedule.png");
- background-repeat:no-repeat; 
- background-color:white;
- opacity:0.5;
- overflow:hidden;
-}
-#weeks{
- width:475px;
- height:250px;
- border:0;
- margin-top:40px;
-}
-#grid{
-  width:200px;
-  height:300px;
-  float:left;
-  padding:6px;
-  }
-#thumb{
-  width:200px;
-  height:250px;
-}
-#lts
-{
-  height:600px;
-  overflow:hidden;
-}
+  border-top: 1px solid #4c4c4c; 
+  margin-top: 80px; }
